kcm/[core,qml]: Cleanup Manual Config/Remote printer search

qml: Add contextual help for the manual config options.  For printer host
search, don't populate list with "local" printers.  Also, handle CUPS
results and errors for remote printer search.

core: Don't emit remotePrintersLoaded if there is a CUPS error

BUG: 488097
FIXED-IN: 6.2